deploy/overlays/tst/patches/ingress/envida-ehrbase-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: envida-ehrbase-ingress
  namespace: dh-health
spec:
  rules:
    - host: ehrbase.envida.tst.dh.unimaas.nl
