deploy/overlays/tst/patches/ingress/mumc-etl-zib-rest-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mumc-etl-zib-rest-ingress
  namespace: dh-health
spec:
  rules:
    - host: etl.mumc.tst.dh.unimaas.nl
