deploy/overlays/tst/patches/ingress/vitala-ehrbase-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vitala-ehrbase-ingress
  namespace: dh-health
spec:
  rules:
    - host: ehrbase.vitala.tst.dh.unimaas.nl
