deploy/overlays/tst/patches/ingress/zio-ehrbase-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zio-ehrbase-ingress
spec:
  rules:
    - host: ehrbase.zio.tst.dh.unimaas.nl
