deploy/overlays/tst/patches/ingress/zio-etl-zib-rest-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zio-etl-zib-rest-ingress
spec:
  rules:
    - host: etl.zio.tst.dh.unimaas.nl
