deploy/overlays/tst/patches/ingress/zio-portal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zio-portal-ingress
spec:
  rules:
    - host: portal.zio.tst.dh.unimaas.nl
  tls:
    - hosts:
        - portal.zio.tst.dh.unimaas.nl
      secretName: portal-zio-tls-secret
